feat: add React setup with basic structure and API routes
- Updated package.json to include React, React DOM, and React Scripts.
- Configured build and start scripts for React application.
- Added browserslist configuration for production and development.
- Modified vercel.json to route API requests correctly.
- Created auth.js and chat.js API routes with basic responses.
- Added index.html for the React application entry point.
- Created App.css and index.css for basic styling of the application.

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "builds": [
     {
-      "src": "server.js",
+      "src": "api/**/*.js",
       "use": "@vercel/node"
     },
     {
@@ -10,7 +10,7 @@
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/server.js" },
+    { "src": "/api/(.*)", "dest": "/api/$1" },
     { "src": "/(.*)", "dest": "/build/$1" }
   ]
 }
