Initial commit: ThemeBotPark - AI Chatbots with Unique Personalities
 Features:
- 4 unique AI bots with distinct personalities
- User authentication with JWT
- Stripe payment integration
- Contact form system
- Responsive design
- SEO optimization
- PWA support

 Bots:
- RainMaker: Business strategy
- HeartSync: Relationship advice
- FixItFrank: Technical support
- TellItLikeItIs: Honest feedback

 Live: https://themebotpark-b35brpylq-kevins-projects-5e23f80d.vercel.app

--- a/package.json
+++ b/package.json
@@ -1,15 +1,28 @@
 {
   "dependencies": {
+    "@stripe/stripe-js": "^7.5.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "openai": "^5.10.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-scripts": "^5.0.1"
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^7.7.0",
+    "react-scripts": "^5.0.1",
+    "stripe": "^18.3.0"
   },
+  "proxy": "http://localhost:3001",
   "scripts": {
+    "client": "react-scripts start",
+    "server": "nodemon server.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "react-scripts build",
     "start": "node server.js"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.1.10"
   },
   "browserslist": {
     "production": [
