--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
     "@stripe/stripe-js": "^7.5.0",
+    "compression": "^1.8.1",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^8.0.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "openai": "^5.10.1",
     "react": "^19.1.0",
@@ -10,7 +14,8 @@
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.7.0",
     "react-scripts": "^5.0.1",
-    "stripe": "^18.3.0"
+    "stripe": "^18.3.0",
+    "uuid": "^9.0.1"
   },
   "proxy": "http://localhost:3001",
   "scripts": {
@@ -18,7 +23,11 @@
     "server": "nodemon server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "react-scripts build",
-    "start": "node server.js"
+    "start": "NODE_ENV=production node server.js",
+    "postinstall": "npm run build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
