--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "server": "nodemon server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "react-scripts build",
-    "start": "NODE_ENV=production node server.js",
+    "start": "cross-env NODE_ENV=production node server.js",
     "postinstall": "npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.10"
   },
   "browserslist": {
