--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
     "openai": "^5.10.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-helmet-async": "^2.0.5",
-    "react-router-dom": "^7.7.0",
-    "react-scripts": "^5.0.1",
+    "react-helmet-async": "^1.3.0",
+    "react-router-dom": "^6.8.1",
+    "react-scripts": "^0.0.0",
     "stripe": "^18.3.0",
     "uuid": "^9.0.1"
   },
   "proxy": "http://localhost:3001",
   "scripts": {
-    "client": "react-scripts start",
+    "client": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
     "server": "nodemon server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "react-scripts build",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "start": "cross-env NODE_ENV=production node server.js",
     "postinstall": "npm run build",
     "test": "react-scripts test",
