--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@stripe/stripe-js": "^7.5.0",
+    "@vercel/analytics": "^1.5.0",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
@@ -33,7 +34,7 @@
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "nodemon": "^3.1.10",
-    "vercel": "^30.0.0"
+    "vercel": "^44.5.3"
   },
   "browserslist": {
     "production": [
