feat: Add production optimizations
- Add service worker for offline support and caching
- Implement performance monitoring and Web Vitals tracking
- Add comprehensive analytics system
- Enhance PWA manifest configuration
- Add performance budgets and error tracking
- Optimize for production deployment

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -23,10 +23,11 @@
   "display": "standalone",
   "theme_color": "#4A9EFF",
   "background_color": "#ffffff",
-  "orientation": "portrait-primary",
+  "orientation": "any",
   "scope": "/",
   "lang": "en-US",
-  "categories": ["productivity", "social", "business"],
+  "categories": ["productivity", "social", "business", "entertainment"],
+  "prefer_related_applications": false,
   "screenshots": [
     {
       "src": "screenshot-wide.png",
