feat: Implement comprehensive theme enhancements including dark mode, mobile responsiveness, and interactive effects
- Added dark mode support with auto-detection and manual toggle
- Enhanced mobile responsiveness with adaptive layouts and touch optimization
- Improved color compatibility for accessibility (WCAG AA compliant)
- Introduced interactive effects such as shimmer animations and card hover effects
- Conducted thorough testing for build performance, accessibility, and device compatibility
- Updated documentation to reflect new features and testing results
- Removed unused service worker code and analytics utilities for cleaner architecture

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -23,11 +23,10 @@
   "display": "standalone",
   "theme_color": "#4A9EFF",
   "background_color": "#ffffff",
-  "orientation": "any",
+  "orientation": "portrait-primary",
   "scope": "/",
   "lang": "en-US",
-  "categories": ["productivity", "social", "business", "entertainment"],
-  "prefer_related_applications": false,
+  "categories": ["productivity", "social", "business"],
   "screenshots": [
     {
       "src": "screenshot-wide.png",
