--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "@stripe/stripe-js": "^7.5.0",
     "@vercel/analytics": "^1.5.0",
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
@@ -10,6 +12,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "openai": "^5.10.1",
+    "package": "^1.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-helmet-async": "^1.3.0",
