--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
 {
+  "version": 2,
   "builds": [
-    { "src": "package.json", "use": "@vercel/static-build", "config": { "distDir": "build" } }
+    { "src": "server.js", "use": "@vercel/node" },
+    { "src": "public/index.html", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
+    { "src": "/api/(.*)", "dest": "/api/$1.js" },
+    { "src": "/static/(.*)", "dest": "/build/static/$1" },
+    { "src": "/(.*)", "dest": "/public/index.html" }
   ]
 }
