--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,8 +21,8 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#4A9EFF",
-  "background_color": "#ffffff",
+  "theme_color": "#3ccb5f",
+  "background_color": "#141313",
   "orientation": "portrait-primary",
   "scope": "/",
   "lang": "en-US",
