--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "stripe": "^18.3.0",
     "uuid": "^9.0.1"
   },
-  "proxy": "https://themebotpark.onrender.com",
+  "proxy": "http://localhost:3001",
   "scripts": {
     "client": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
     "server": "nodemon server.js",
