🚀 Production deployment ready - Vercel + Render configuration complete
✅ Frontend: Built and ready for Vercel deployment
✅ Backend: Live on Render at https://themebotpark.onrender.com
✅ API URLs: All configured for production
✅ 404 Handling: Custom NotFound page added
✅ CORS: Configured for cross-origin requests
✅ Environment: Production vs development detection
✅ Stripe: Payment integration ready
✅ Build: Optimized production bundle

--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,77 @@
 # Environment Variables for ThemeBotPark
 
-# OpenAI API Configuration
-OPENAI_API_KEY=your_openai_api_key_here
+# OpenAI API Configuration (Required for AI responses)
+OPENAI_API_KEY=sk-your_openai_api_key_here
 
-# Stripe Configuration
-STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
-STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+# Stripe Configuration (Required for payments)
+STRIPE_SECRET_KEY=sk_live_your_stripe_secret_key_here
+STRIPE_PUBLISHABLE_KEY=pk_live_your_stripe_publishable_key_here
 
 # React App Environment Variables (must start with REACT_APP_)
-REACT_APP_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+REACT_APP_STRIPE_PUBLISHABLE_KEY=pk_live_your_stripe_publishable_key_here
+REACT_APP_STRIPE_MONTHLY_PRICE_ID=price_your_monthly_price_id
+REACT_APP_STRIPE_YEARLY_PRICE_ID=price_your_yearly_price_id
 
-# JWT Secret for Authentication
-JWT_SECRET=your_jwt_secret_here
+# JWT Secret for Authentication (Required - generate a secure random string)
+JWT_SECRET=your_secure_jwt_secret_key_at_least_32_characters_long
 
-# Database Configuration (for future use)
-# DATABASE_URL=your_database_url_here
+# Database Configuration (Choose one)
+# PostgreSQL
+DATABASE_URL=postgresql://username:password@host:port/database_name
 
-# Weaviate Configuration (for future use)
-# WEAVIATE_URL=your_weaviate_url_here
-# WEAVIATE_API_KEY=your_weaviate_api_key_here
+# Or MongoDB
+# MONGODB_URI=mongodb://username:password@host:port/database_name
 
-# PostHog Configuration (for future use)
-# POSTHOG_API_KEY=your_posthog_api_key_here
+# Or MySQL
+# MYSQL_URL=mysql://username:password@host:port/database_name
 
-# Stripe Price IDs (replace with your actual price IDs from Stripe Dashboard)
-# STRIPE_MONTHLY_PRICE_ID=price_1234567890
-# STRIPE_YEARLY_PRICE_ID=price_0987654321
+# Email Service Configuration (Required for password reset)
+# SendGrid
+SENDGRID_API_KEY=SG.your_sendgrid_api_key
+SENDGRID_FROM_EMAIL=noreply@yourdomain.com
+
+# Or SMTP
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=your_email@gmail.com
+# SMTP_PASS=your_app_password
+
+# Analytics Configuration (Optional)
+# PostHog
+POSTHOG_API_KEY=phc_your_posthog_api_key
+POSTHOG_HOST=https://app.posthog.com
+
+# Or Google Analytics
+# GA_MEASUREMENT_ID=G-XXXXXXXXXX
+
+# Security Configuration
+# CORS Origins (comma-separated list of allowed origins)
+CORS_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
+
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# File Upload Configuration (if needed)
+# AWS S3
+# AWS_ACCESS_KEY_ID=your_aws_access_key
+# AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+# AWS_S3_BUCKET=your_bucket_name
+# AWS_REGION=us-east-1
+
+# Social Authentication (Optional)
+# Google OAuth
+# GOOGLE_CLIENT_ID=your_google_client_id
+# GOOGLE_CLIENT_SECRET=your_google_client_secret
+
+# Facebook OAuth
+# FACEBOOK_APP_ID=your_facebook_app_id
+# FACEBOOK_APP_SECRET=your_facebook_app_secret
+
+# Production Configuration
+NODE_ENV=production
+PORT=3001
+
+# Application URLs
+CLIENT_URL=https://yourdomain.com
+SERVER_URL=https://api.yourdomain.com
