--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@vercel/analytics": "^1.5.0",
     "ajv": "^6.12.6",
     "ajv-keywords": "^3.5.2",
+    "bcrypt": "^6.0.0",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
@@ -11,8 +12,10 @@
     "express-rate-limit": "^8.0.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.5",
     "openai": "^5.10.1",
     "package": "^1.0.1",
+    "posthog-node": "^5.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-helmet-async": "^1.3.0",
@@ -21,7 +24,7 @@
     "stripe": "^18.3.0",
     "uuid": "^9.0.1"
   },
-  "proxy": "http://localhost:3001",
+  "homepage": "https://themebotpark.vercel.app",
   "scripts": {
     "client": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
     "server": "nodemon server.js",
