--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,29 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/*.js", "use": "@vercel/node" },
-    { "src": "build/**", "use": "@vercel/static" }
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
+    }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
-    { "src": "/static/(.*)", "dest": "/build/static/$1" },
-    { "src": "/manifest.json", "dest": "/build/manifest.json" },
-    { "src": "/favicon.ico", "dest": "/build/favicon.ico" },
-    { "src": "/logo192.png", "dest": "/build/logo192.png" },
-    { "src": "/logo512.png", "dest": "/build/logo512.png" },
-    { "src": "/robots.txt", "dest": "/build/robots.txt" },
-    { "src": "/sitemap.xml", "dest": "/build/sitemap.xml" },
-    { "src": "/(.*)", "dest": "/build/index.html" }
+    {
+      "src": "/static/(.*)",
+      "dest": "/build/static/$1",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      }
+    },
+    {
+      "src": "/(manifest\\.json|favicon\\.ico|logo192\\.png|logo512\\.png|robots\\.txt|sitemap\\.xml)",
+      "dest": "/build/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/build/index.html"
+    }
   ]
 }
