--- a/vercel.json
+++ b/vercel.json
@@ -18,8 +18,18 @@
       }
     },
     {
-      "src": "/(manifest\\.json|favicon\\.ico|logo192\\.png|logo512\\.png|robots\\.txt|sitemap\\.xml)",
-      "dest": "/build/$1"
+      "src": "/(manifest\\.json|favicon\\.ico|favicon\\.svg|logo192\\.png|logo512\\.png|robots\\.txt|sitemap\\.xml|og-image\\.svg)",
+      "dest": "/build/$1",
+      "headers": {
+        "cache-control": "public, max-age=86400"
+      }
+    },
+    {
+      "src": "/images/(.*)",
+      "dest": "/build/images/$1",
+      "headers": {
+        "cache-control": "public, max-age=86400"
+      }
     },
     {
       "src": "/(.*)",
