--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "stripe": "^18.3.0",
     "uuid": "^9.0.1"
   },
-  "homepage": "https://themebotpark.vercel.app",
+  "homepage": ".",
   "scripts": {
     "client": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
     "server": "nodemon server.js",
