--- a/vercel.json
+++ b/vercel.json
@@ -13,27 +13,25 @@
       "use": "@vercel/node"
     }
   ],
-  "rewrites": [
-    { "source": "/((?!api|static|images|.*\\..*).*)", "destination": "/index.html" }
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/static/(.*)", "dest": "/static/$1" },
+    { "src": "/(manifest\\.json|favicon\\.ico|favicon\\.svg|logo192\\.png|logo512\\.png|robots\\.txt|sitemap\\.xml|og-image\\.svg)", "dest": "/$1" },
+    { "src": "/images/(.*)", "dest": "/images/$1" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ],
   "headers": [
     {
       "source": "/static/(.*)",
-      "headers": [
-        { "key": "cache-control", "value": "public, max-age=31536000, immutable" }
-      ]
+      "headers": [ { "key": "cache-control", "value": "public, max-age=31536000, immutable" } ]
     },
     {
       "source": "/(manifest.json|favicon.ico|favicon.svg|logo192.png|logo512.png|robots.txt|sitemap.xml|og-image.svg)",
-      "headers": [
-        { "key": "cache-control", "value": "public, max-age=86400" }
-      ]
+      "headers": [ { "key": "cache-control", "value": "public, max-age=86400" } ]
     },
     {
       "source": "/images/(.*)",
-      "headers": [
-        { "key": "cache-control", "value": "public, max-age=86400" }
-      ]
+      "headers": [ { "key": "cache-control", "value": "public, max-age=86400" } ]
     }
   ]
 }
