--- a/vercel.json
+++ b/vercel.json
@@ -13,12 +13,12 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
-    { "src": "/static/(.*)", "dest": "/static/$1" },
-    { "src": "/(manifest\\.json|favicon\\.ico|favicon\\.svg|logo192\\.png|logo512\\.png|robots\\.txt|sitemap\\.xml|og-image\\.svg)", "dest": "/$1" },
-    { "src": "/images/(.*)", "dest": "/images/$1" },
-    { "src": "/(.*)", "dest": "/index.html" }
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api/$1" },
+    { "source": "/static/(.*)", "destination": "/static/$1" },
+    { "source": "/images/(.*)", "destination": "/images/$1" },
+    { "source": "/(manifest.json|favicon.ico|favicon.svg|logo192.png|logo512.png|robots.txt|sitemap.xml|og-image.svg)", "destination": "/$1" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ],
   "headers": [
     {
