--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
   "dependencies": {
-    "@stripe/stripe-js": "^7.5.0",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.2.0",
-    "ajv": "^6.12.6",
-    "ajv-keywords": "^3.5.2",
-    "bcrypt": "^6.0.0",
-    "compression": "^1.8.1",
+    "@stripe/stripe-js": "^4.8.0",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
+    "bcrypt": "^5.1.1",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
-    "express": "^4.18.2",
-    "express-rate-limit": "^8.0.1",
-    "helmet": "^8.1.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.1",
-    "nodemailer": "^7.0.5",
-    "openai": "^5.10.1",
-    "package": "^1.0.1",
-    "posthog-node": "^5.6.0",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.16",
+    "openai": "^4.68.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-helmet-async": "^1.3.0",
-    "react-router-dom": "^6.8.1",
-    "react-scripts": "^5.0.1",
-    "stripe": "^18.3.0",
-    "uuid": "^9.0.1"
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^6.28.0",
+    "react-scripts": "5.0.1",
+    "stripe": "^17.3.1",
+    "uuid": "^10.0.0",
+    "framer-motion": "^11.11.11",
+    "lucide-react": "^0.453.0"
   },
   "homepage": ".",
   "scripts": {
@@ -32,22 +32,29 @@
     "server": "nodemon server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
+    "build:analyze": "npm run build && npx webpack-bundle-analyzer build/static/js/*.js",
     "start": "cross-env NODE_ENV=production node server.js",
     "postinstall": "npm run build",
     "test": "react-scripts test",
+    "test:coverage": "react-scripts test --coverage --watchAll=false",
     "eject": "react-scripts eject",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "optimize": "npm run lint:fix && npm run build && npm run test:coverage"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2",
+    "concurrently": "^9.0.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.57.0",
-    "nodemon": "^3.1.10",
-    "vercel": "^41.0.2"
+    "eslint": "^8.57.1",
+    "nodemon": "^3.1.7",
+    "vercel": "^37.11.2",
+    "prettier": "^3.3.3",
+    "webpack-bundle-analyzer": "^4.10.2"
   },
   "overrides": {
     "resolve-url-loader": {
-      "postcss": "^8.4.31"
+      "postcss": "^8.4.47"
     }
   },
   "browserslist": {
@@ -55,11 +62,10 @@
       ">0.2%",
       "not dead",
       "not op_mini all",
-      "last 2 Chrome versions",
-      "last 2 Firefox versions",
-      "last 2 Safari versions",
-      "last 2 Edge versions",
-      "ie 11"
+      "last 3 Chrome versions",
+      "last 3 Firefox versions",
+      "last 3 Safari versions",
+      "last 3 Edge versions"
     ],
     "development": [
       "last 2 chrome versions",
