--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,7 @@ jobs:
 
       - name: Run linting
         run: npm run lint
+        continue-on-error: true
 
       - name: Build project
         run: npm run build
