--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,190 +1,52 @@
 name: Deploy to Vercel
-permissions:
-  contents: read
 
 on:
   push:
     branches:
       - main
-
-env:
-  VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  build_and_deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "18"
-          cache: "npm"
-
-      - name: Cache npm cache
-        uses: actions/cache@v3
+      - name: Cache node modules
+        uses: actions/cache@v4
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - name: Debug and validate Vercel secrets
-        run: |
-          echo "🔍 Checking Vercel secrets availability..."
-          
-          # Check VERCEL_TOKEN
-          if [ -z "$VERCEL_TOKEN" ]; then
-            echo "❌ VERCEL_TOKEN is not set or empty"
-            MISSING_SECRETS=true
-          else
-            echo "✅ VERCEL_TOKEN is present (length: ${#VERCEL_TOKEN})"
-          fi
-          
-          # Check VERCEL_ORG_ID
-          if [ -z "$VERCEL_ORG_ID" ]; then
-            echo "❌ VERCEL_ORG_ID is not set or empty"
-            MISSING_SECRETS=true
-          else
-            echo "✅ VERCEL_ORG_ID is present (starts with: ${VERCEL_ORG_ID:0:8}...)"
-          fi
-          
-          # Check VERCEL_PROJECT_ID
-          if [ -z "$VERCEL_PROJECT_ID" ]; then
-            echo "❌ VERCEL_PROJECT_ID is not set or empty"
-            MISSING_SECRETS=true
-          else
-            echo "✅ VERCEL_PROJECT_ID is present (starts with: ${VERCEL_PROJECT_ID:0:8}...)"
-          fi
-          
-          # Exit with error if any secrets are missing
-          if [ "$MISSING_SECRETS" = true ]; then
-            echo ""
-            echo "❌ Missing required Vercel secrets detected!"
-            echo "Please ensure these secrets are set in your repository settings:"
-            echo "📋 Required secrets:"
-            echo "  - VERCEL_TOKEN: Your Vercel personal access token"
-            echo "  - VERCEL_ORG_ID: Your Vercel organization ID"
-            echo "  - VERCEL_PROJECT_ID: Your Vercel project ID"
-            echo ""
-            echo "🔧 To find these values:"
-            echo "  1. Go to your Vercel project settings"
-            echo "  2. Find Organization ID and Project ID in the project settings"
-            echo "  3. Generate a token in your Vercel account settings"
-            exit 1
-          fi
-          
-          echo "✅ All Vercel secrets are properly configured and available"
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Run linting
-        run: npm run lint
-        continue-on-error: true
-
-      - name: Run tests
-        run: npm test -- --coverage --watchAll=false
-        env:
-          CI: true
-        continue-on-error: true
+      - name: Verify react-scripts install
+        run: npm list react-scripts
 
       - name: Build project
         run: npm run build
-        env:
-          CI: false # Treat warnings as warnings, not errors
-          NODE_OPTIONS: --openssl-legacy-provider
 
-      - name: Run security audit
-        run: npm audit --audit-level high
-        continue-on-error: true # Don't fail the build on audit issues
+      # Add Vercel CLI if needed for deploy (optional, if not handled by Vercel GitHub integration)
+      # - name: Install Vercel CLI
+      #   run: npm install -g vercel
 
-      - name: Deploy to Vercel
-        id: deploy-vercel
-        uses: amondnet/vercel-action@v20
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          vercel-args: '--prod'
+      # - name: Deploy to Vercel
+      #   env:
+      #     VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+      #     VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+      #     VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+      #   run: vercel --prod --token $VERCEL_TOKEN --confirm
 
-      - name: Health check after deployment
-        run: |
-          # Wait for deployment to be ready
-          sleep 30
-          
-          # Try to get the deployment URL from Vercel Action output
-          DEPLOY_URL="${{ steps.deploy-vercel.outputs.url }}"
-          if [ -z "$DEPLOY_URL" ]; then
-            DEPLOY_URL="https://themebotpark.vercel.app"
-          fi
-          
-          echo "Checking health of: $DEPLOY_URL"
-          
-          # Health check with retries
-          for i in {1..5}; do
-            if curl -f -s "$DEPLOY_URL/health" > /dev/null; then
-              echo "✅ Health check passed"
-              curl -s "$DEPLOY_URL/health" | jq .
-              break
-            else
-              echo "⚠️  Health check failed (attempt $i/5)"
-              if [ $i -eq 5 ]; then
-                echo "❌ Health check failed after 5 attempts"
-                exit 1
-              fi
-              sleep 10
-            fi
-          done
-
-      - name: Test critical endpoints
-        run: |
-          DEPLOY_URL="https://themebotpark.vercel.app"
-          
-          echo "Testing critical endpoints..."
-          
-          # Test main page
-          if curl -f -s "$DEPLOY_URL" > /dev/null; then
-            echo "✅ Main page accessible"
-          else
-            echo "❌ Main page not accessible"
-            exit 1
-          fi
-          
-          # Test API endpoints
-          if curl -f -s "$DEPLOY_URL/api/chat" > /dev/null; then
-            echo "✅ Chat API accessible"
-          else
-            echo "❌ Chat API not accessible"
-          fi
-
-      - name: Performance check
-        run: |
-          DEPLOY_URL="https://themebotpark.vercel.app"
-          
-          echo "Running basic performance check..."
-          
-          # Measure load time
-          START_TIME=$(date +%s%N)
-          curl -f -s -o /dev/null "$DEPLOY_URL"
-          END_TIME=$(date +%s%N)
-          
-          LOAD_TIME_MS=$(( ($END_TIME - $START_TIME) / 1000000 ))
-          echo "Page load time: ${LOAD_TIME_MS}ms"
-          
-          if [ $LOAD_TIME_MS -gt 5000 ]; then
-            echo "⚠️  Warning: Page load time is slow (${LOAD_TIME_MS}ms)"
-          else
-            echo "✅ Page load time is acceptable"
-          fi
-
-      - name: Deployment summary
-        run: |
-          echo "🎉 Deployment completed successfully!"
-          echo "🌐 URL: https://themebotpark.vercel.app"
-          echo "🏥 Health: https://themebotpark.vercel.app/health"
-          echo "📊 Metrics: https://themebotpark.vercel.app/metrics"
+      # If using Vercel for GitHub integration, no CLI step is needed
