Major Update: Fix application issues & implement creator features
 Fixed Issues:
- Resolved black screen caused by incorrect PUBLIC_URL configuration
- Fixed 404 errors by correcting API route paths in server.js
- Updated build configuration for proper development/production handling

 New Features:
- Complete Creator Portal with bot creation, analytics, and payouts
- Interactive bot rating system with 5-star ratings
- Community bot discovery on homepage
- Enhanced bot management with CRUD operations
- Real-time rating updates and analytics

 Improvements:
- Updated AI description from GPT-3.5 to 'state-of-the-art OpenAI models'
- Added proper API endpoints for creator functionality
- Integrated BotRating component across the application
- Enhanced homepage with dynamic creator bot loading

 Technical Updates:
- Added /api/creator endpoints for full creator functionality
- Implemented bot rating submission and retrieval
- Fixed environment variable handling for dev vs production
- Updated CreatorDashboard to use local API endpoints

All 7 AI personalities working + creator portal + rating system fully operational!

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "themebotpark",
   "version": "1.0.0",
   "description": "A fullstack app using React and Node.js/Express",
-  "homepage": ".",
+  "homepage": "/",
   "scripts": {
     "client": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
     "server": "nodemon server.js",
