Fix deployment: Add timestamp to deployment summary

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,3 +58,4 @@ jobs:
           echo "🎉 Deployment completed successfully!"
           echo "🌐 URL: https://themebotpark.vercel.app"
           echo "🏥 Health: https://themebotpark.vercel.app/health"
+          echo "📅 Deployed: $(date)"
