--- a/vercel.json
+++ b/vercel.json
@@ -9,19 +9,19 @@
     },
     {
       "src": "/static/(.*)",
-      "dest": "/build/static/$1"
+      "dest": "/static/$1"
     },
     {
       "src": "/(manifest\\.json|favicon\\.ico|favicon\\.svg|logo192\\.png|logo512\\.png|robots\\.txt|sitemap\\.xml|sw\\.js|sw-enhanced\\.js|og-image\\.svg)",
-      "dest": "/build/$1"
+      "dest": "/$1"
     },
     {
       "src": "/images/(.*)",
-      "dest": "/build/images/$1"
+      "dest": "/images/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "/build/index.html"
+      "dest": "/index.html"
     }
   ]
 }
